2019-04-08

        * Version 1.6.0 released
        ========================

        GWcs::wcs_set() method now sets radesys and equinox members (#2866)
        Add GCTAPointing::is_valid() method and remove table methods
        Set CTA IRF integration iterations to 6 to cope with H.E.S.S. PSF (#2860)
        Add kludge to handle incomplete Fermi-LAT source maps (#2850)
        Correct Nbgd computation in GCTAOnOffObservation for Non=0 (#2838)
        Improve OpenMP handling in GWcs::dir2pix (#2770)
        Add support for Fermi/LAT P8V3 response functions
        CTA background rates are now per ontime (#2758)
        Add GPythonOptimizerFunction class (#2733)
        Remove diffuse response cube caching (#2722)
        Revise GCTAEdispCube::operator() interface and disable stacked response
          cutting in true energy (#2721)
        Rename GCTAResponseIrf::lo_save_thres() and GCTAResponseIrf::hi_save_thres()
          to GCTAResponseIrf::lo_safe_thres() and GCTAResponseIrf::hi_safe_thres()
          (#2716)
        Add generic CTA response cache (#2715)
        GCTAOnOffObservation now supports any kind of background model (#2710)
        Fix precision issue with GCTABackground3D Monte-Carlo simulations (#2708)
        Integrate energy dispersion linearly instead of logarithmically (#2706)
        Revise GCTAEdisp class interface (#2704) 
        GCTAEdisp returns now energy dispersion values per MeV (#2704) 
        Protect GCTAInstDir from access to invalid information (#2694)
        Implement general CTA background model (#2694)
        Fix bug that potentially wrote the wrong exposure time in a PHA file (#2683)
        Correct handling of stacked On/Off observations without background IRF
          (#2683)
        Fix OpenMP bug in GObservations::likelihood::eval (#2678)
        Define GCTACubeBackground for energy boundaries instead of nodes (#2677) 
        Remove setting of effective area energy boundaries from "LO_THRES" and